tăng chiều ngang của khung chụp ảnh ekyc

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -143,7 +143,7 @@
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input *ngIf="d.login_by === 'email'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
                            (focusin)="onFocusIn($event, index, 'signature')"
                            (ngxInputSearch)="doTheSearch($event, index, 'signature')" [(ngModel)]="d.name"
                            (focusout)="onFocusOut($event, d)">
@@ -181,7 +181,7 @@
               </div>
 
               <div class="participants--input" style="display: flex">
-                <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
+                <div class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
