--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -20,11 +20,10 @@
   </div>
 </div>
 
-<div class="signature-container" id="export-html-hsm"
-     style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
-  <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+<div class="signature-container" id="export-html-hsm1" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
+  <img style="width: 30px"  src="assets/img/tick_signature.svg" alt="duongdt.vn">
   <div class="signature-content"
-       style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+  style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
     <div style="z-index: 2;text-align: left;">Mã số thuế: {{cardId}}</div>
     <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
   </div>
