--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
@@ -6,18 +6,18 @@
   flex-direction: column;
 }
 
-.text-sign span {
-  width: 125px;
-  border: 0px;
-  height: 25px;
-  outline: none;
-  //color: #106DB6;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: 100px;
-  display: block;
-}
+// .text-sign span {
+//   width: 125px;
+//   border: 0px;
+//   height: 25px;
+//   outline: none;
+//   //color: #106DB6;
+//   overflow: hidden;
+//   white-space: nowrap;
+//   text-overflow: ellipsis;
+//   max-width: 100px;
+//   display: block;
+// }
 
 .input-edit-text {
   width: 101%;
