--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -20,12 +20,11 @@
   </div>
 </div>
 
-<div class="signature-container" id="export-html-hsm1"  style="min-height: 80px;display: flex; font-size: 9px">
+<div id="export-html-hsm1"  style="min-height: 80px;display: flex; font-size: 9px">
   <img style="width: 30px"  src="assets/img/tick_signature.svg" alt="duongdt.vn">
-  <div class="signature-content"
-  style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-    <div style="z-index: 2;text-align: left;">Mã số thuế: {{cardId}}</div>
-    <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+  <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Mã số thuế: {{cardId}}</span>
+    <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
   </div>
 </div>
 
