--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -183,12 +183,8 @@
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
-                      <div *ngIf="d.typeSign">
-                        <input (change)="changeTypeSign(d)" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0/>
-                      </div>&nbsp;
-
-                      <div *ngIf="!d.typeSign">
-                        <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0/>
+                      <div>
+                        <input (change)="changeTypeSign(d)" [(ngModel)]="d.login_by" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]="email"/>
                       </div>&nbsp;
                       <div>
                           {{'Đăng nhập bằng email' | translate}}
@@ -198,7 +194,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input (change)="changeTypeSign(d)" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=1/>
+                        <input (change)="changeTypeSign(d)" [(ngModel)]="d.login_by" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]="phone"/>
                       </div>&nbsp;
                       <div>
                         {{'Đăng nhập bằng số điện thoại' | translate}}
@@ -217,7 +213,7 @@
                   </div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img" />
-                    <input *ngIf="!d.typeSign"
+                    <input *ngIf="d.login_by === 'email'"
                       type="text"
                       placeholder="{{ 'nhap_ho_va_ten' | translate }}"
                       (focusin)="onFocusIn($event, index, 'signature')"
@@ -226,7 +222,7 @@
                       (focusout)="onFocusOut($event, d)"
                     />
 
-                    <input *ngIf="d.typeSign === 1"
+                    <input *ngIf="d.login_by === 'phone'"
                     type="text"
                     placeholder="{{ 'nhap_ho_va_ten' | translate }}"
                     (focusin)="onFocusIn($event, index, 'signature')"
@@ -283,7 +279,7 @@
               </div>
 
               <div class="participants--input" style="display: flex">
-                <div *ngIf="d.typeSign == 0 || !d.typeSign" class="participants__name" style="width: 90%">
+                <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
                     Email&nbsp;<span class="required-title">*</span>
                   </div>
@@ -297,7 +293,7 @@
                   </div>
                 </div>
 
-                <div *ngIf="d.typeSign == 1" class="participants__name" style="width: 90%">
+                <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
                     Số điện thoại&nbsp;<span class="required-title">*</span>
                   </div>
@@ -484,38 +480,11 @@
                     </ng-template>
                   </ng-multiselect-dropdown>
                 </div>
-                <!-- <div *ngIf="d.typeSign == 0 || !d.typeSign" class="participants__name">
-                  <div class="label_detail text-color">
-                    Email&nbsp;<span class="required-title">*</span>
-                  </div>
-                  <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img" />
-                    <input
-                      type="text"
-                      placeholder="{{ 'nhap_email' | translate }}"
-                      [(ngModel)]="d.email"
-                    />
-                  </div>
-                </div>
-
-                <div *ngIf="d.typeSign == 1" class="participants__name">
-                  <div class="label_detail text-color">
-                    Số điện thoại&nbsp;<span class="required-title">*</span>
-                  </div>
-                  <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img" />
-                    <input
-                      type="text"
-                      placeholder="{{ 'Nhập số điện thoại' | translate }}"
-                      [(ngModel)]="d.email"
-                    />
-                  </div>
-                </div> -->
               </div>
 
               <div class="participants--input">
 
-                  <div *ngIf="d.typeSign == 0 || !d.typeSign" class="participants__name" style="width: 90%">
+                  <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
                     Email&nbsp;<span class="required-title">*</span>
                   </div>
@@ -529,7 +498,7 @@
                   </div>
                 </div>
 
-                <div *ngIf="d.typeSign == 1" class="participants__name" style="width: 90%">
+                <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
                     Số điện thoại&nbsp;<span class="required-title">*</span>
                   </div>
@@ -889,7 +858,7 @@
                   <div class="label_detail text-color">
 
                     <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartSign_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartSign_{{index}}" [value]="email" [(ngModel)]="email"/>
                     </div>&nbsp;
                     <div>
                       {{'Đăng nhập bằng email' | translate}}
@@ -977,7 +946,7 @@
 
                 <!--Trường nhập loại ký cho người ký của tổ chức-->
                 <div class="participants--input" style="display: flex">
-                       <div *ngIf="d.typeSign == 0 || !d.typeSign" class="participants__name" style="width: 90%">
+                       <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
                       Email&nbsp;<span class="required-title">*</span>
                     </div>
@@ -991,7 +960,7 @@
                     </div>
                   </div>
 
-                  <div *ngIf="d.typeSign == 1" class="participants__name" style="width: 90%">
+                  <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
                       Số điện thoại&nbsp;<span class="required-title">*</span>
                     </div>
@@ -1187,7 +1156,7 @@
 
                 <div class="participants--input" style="display: flex">
 
-                  <div *ngIf="d.typeSign == 0 || !d.typeSign" class="participants__name" style="width:90%">
+                  <div *ngIf="d.login_by === 'email'" class="participants__name" style="width:90%">
                     <div class="label_detail text-color">
                       Email&nbsp;<span class="required-title">*</span>
                     </div>
@@ -1201,7 +1170,7 @@
                     </div>
                   </div>
 
-                  <div *ngIf="d.typeSign == 1" class="participants__name" style="width:90%">
+                  <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width:90%">
                     <div class="label_detail text-color">
                       Số điện thoại&nbsp;<span class="required-title">*</span>
                     </div>
@@ -1388,7 +1357,7 @@
                   </div>
                 </div>
                 <div class="participants--input" style="display: flex">
-                  <div *ngIf="d.typeSign == 0 || !d.typeSign" class="participants__name" style="width: 90%">
+                  <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
                       Email&nbsp;<span class="required-title">*</span>
                     </div>
@@ -1402,7 +1371,7 @@
                     </div>
                   </div>
 
-                  <div *ngIf="d.typeSign == 1" class="participants__name" style="width: 90%">
+                  <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
                       Số điện thoại&nbsp;<span class="required-title">*</span>
                     </div>
@@ -1418,7 +1387,7 @@
                 </div>
 
                 <div class="participants--input">
-                <div *ngIf="d.typeSign == 0 || !d.typeSign && getDataSignCka(d).length > 0" class="participants__name" style="width: 90%">
+                <div *ngIf="d.login_by === 'phone' && getDataSignCka(d).length > 0" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
                     Số điện thoại&nbsp;<span
                       *ngIf="getDataSignCka(d).length > 0"
