--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -484,7 +484,7 @@
 
               <div class="participants--input">
 
-                  <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
+                  <div class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
                     Email&nbsp;<span class="required-title">*</span>
                   </div>
@@ -498,7 +498,7 @@
                   </div>
                 </div>
 
-                <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
+                <!-- <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
                     Số điện thoại&nbsp;<span class="required-title">*</span>
                   </div>
@@ -510,7 +510,7 @@
                       [(ngModel)]="d.email"
                     />
                   </div>
-                </div>
+                </div> -->
               </div>
 
                <!--trường hiển thị khi văn thư tổ chức của tôi chọn loại ký là usb token-->
@@ -619,6 +619,8 @@
             >
           </div>
         </div>
+
+        <!--Đối tác là tổ chức-->
         <div *ngIf="item.type == 2">
           <!-- điều phối hđ -->
           <div class="participants-border">
@@ -1156,7 +1158,7 @@
 
                 <div class="participants--input" style="display: flex">
 
-                  <div *ngIf="d.login_by === 'email'" class="participants__name" style="width:90%">
+                  <div class="participants__name" style="width:90%">
                     <div class="label_detail text-color">
                       Email&nbsp;<span class="required-title">*</span>
                     </div>
@@ -1170,7 +1172,7 @@
                     </div>
                   </div>
 
-                  <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width:90%">
+                  <!-- <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width:90%">
                     <div class="label_detail text-color">
                       Số điện thoại&nbsp;<span class="required-title">*</span>
                     </div>
@@ -1182,7 +1184,7 @@
                         [(ngModel)]="d.email"
                       />
                     </div>
-                  </div>
+                  </div> -->
                 </div>
 
                 <div
