comment phần đăng nhập bằng email/số điện thoại phần mẫu hợp đồng do đang test lỗi

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -247,6 +247,7 @@
               </div> -->
 
               <!--Checkbox-->
+              <!--role = 3: ký, role = 4: đóng dấu-->
               <div class="div_icon" *ngIf="item.status == 1 && (item.role == 3 || item.role == 4) && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
                 <div class="col-md-1 calendar_create">
                   <div>
