--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -19,6 +19,7 @@
         <u class="label text-color" (click)="deletePartner(id)"
            style="background-color: #FFFFFF; cursor: pointer">{{(item.type == 2 ? 'xoa_doi_tac_to_chuc' : 'xoa_doi_tac_ca_nhan') | translate}}</u>
       </div>
+
       <div class="contract__content--participants">
         <div *ngIf="item.type == 2">
           <div class="participants-border">
@@ -79,13 +80,18 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="participants--input select-text-input" style="display: flex">
                   <div class="participants__name" style="width: 90%">
                     <div class="label text-color">{{'user.sign-type' | translate}}: <span
                       class="required-title">*</span></div>
 
-                    <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
-                                             [settings]="dropdownSignTypeSettings" [data]="signTypeList">
+                    <ng-multiselect-dropdown 
+                        [(ngModel)]="d.sign_type" 
+                        placeholder="{{'choose' | translate }}"
+                        [settings]="dropdownSignTypeSettings" 
+                        [data]="signTypeList"
+                        >
                       <ng-template #optionsTemplate let-item let-option="option"
                                    let-id="id" let-isSelected="isSelected">
                         <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
@@ -99,6 +105,7 @@
                     <div class="required-title notify">{{'note_chon_loai_ki_so' | translate}}</div>
                   </div>
                 </div>
+
               </div>
               <div *ngIf="getPartnerSignature(item).length > 1" class="col-md-1 delete-element"
                    (click)="deletePartnerSignature(index, item)">
