Thêm giao diện mã số thuế khi ký usb token lúc điều phối

--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
@@ -33,6 +33,16 @@
   color: #5e5e5e;
 }
 
+.label_detail {
+  font-weight: 500;
+  color: #0160AE;
+  background-color: #C7D0E9;
+  height: 40px;
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  align-items: center;
+}
+
 .order {
   display: flex;
   justify-content: center;
