--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -1,12 +1,12 @@
 <div class="footer-contract" *ngIf="this.datas.is_data_contract.status == 20 && this.datas.is_data_contract.release_state == 'CON_HIEU_LUC' && this.mobile === false">
   <div class="btn_footer">
     <div class="label">
-      <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>
-      <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>
+      <button type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>
+      <button type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>
     </div>
     <div class="label">
-      <button *ngIf="!this.is_show_coordination && ![2,3,4].includes(this.datas.roleContractReceived) && !view" type="button" name="next" class="next action-button" (click)="refuseContract()" style="background-color: #8B8B8B">Từ chối</button>
-      <button *ngIf="!this.is_show_coordination && !view" (click)="action()" type="button" name="next" class="next action-button">{{this.datas.action_title == 'dieu_phoi' ? 'Điều phối' : 'Xác nhận'}}</button>
+      <button type="button" name="next" class="next action-button" (click)="refuseContract()" style="background-color: #8B8B8B">Từ chối</button>
+      <button (click)="action()" type="button" name="next" class="next action-button">{{this.datas.action_title == 'dieu_phoi' ? 'Điều phối' : 'Xác nhận'}}</button>
     </div>
   </div>
 </div>
