truyen thong tin login_by cho van thu

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -360,7 +360,7 @@
               <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
 
                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                 <!-- <div class="participants--input" style="display: flex">
+                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -382,7 +382,7 @@
                       </div>
                     </div>
                   </div>
-                </div> -->
+                </div>
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name" style="width: 90%">
@@ -414,7 +414,7 @@
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                   <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi ky to chuc-->
-                  <!-- <div class="participants--input" style="display: flex">
+                  <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
     
@@ -436,7 +436,7 @@
                         </div>
                       </div>
                     </div>
-                  </div> -->
+                  </div>
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -546,7 +546,7 @@
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column;margin-bottom: 14px">
 
                   <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                  <!-- <div class="participants--input" style="display: flex">
+                  <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
     
@@ -568,7 +568,7 @@
                         </div>
                       </div>
                     </div>
-                  </div> -->
+                  </div>
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
