--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -1,5 +1,4 @@
 <div class="container-fluid">
-
   <div class="col-md-12" style="padding-top: 10px;" *ngIf="filter_status == 1 || filter_status == 4 || filter_status == -1 || filter_status == 11">
     <div class="input-line search">
       <img src="../../assets/img/icon_search.svg" class="input-img" />
@@ -9,7 +8,7 @@
     </div>
   </div>
 
-  <!-- <div *ngIf="filter_status == 1">
+  <div *ngIf="filter_status == 1">
     <div *ngIf="this.typeDisplay === 'signOne'" class="col-md-1 btn_search">
       <button (click)="signMany()" class="btn btn-lg btn-block btn_submit">{{'Ký nhiều'| translate}}</button>
     </div>
@@ -18,16 +17,22 @@
       <button class="btn_submit" (click)="signManyContract()">{{'Ký'| translate}}</button>
       <button class="btn_submit" (click)="cancelSignMany()">{{'Huỷ'| translate}}</button>
     </div>
-  </div> -->
+  </div>
 
   <div class="row list_header" *ngIf="pageTotal > 0;">
 
     <div class="col-md-5"></div>
     <div class="col-md-2">{{'create-date' | translate}}</div>
     <div class="col-md-2">{{'expiration-date' | translate}}</div>
-    <div class="col-md-3">{{'action' | translate}}</div>
+    <div *ngIf="this.typeDisplay === 'signOne'" class="col-md-3">{{'action' | translate}}</div>
+
+    <div *ngIf="this.typeDisplay === 'signMany'" class="col-md-3">
+      <input id="all" name="all" type="checkbox" (click)="toggle()"/>
+    </div>
+
   </div>
 
+  <!--Danh sách tất cả hợp đồng cần ký trường hợp ký một-->
   <div *ngIf="this.typeDisplay === 'signOne'">
     <div class="item_contract"  *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
       <div *ngIf="filter_status == 1 || filter_status == 4">
@@ -102,7 +107,7 @@
               <div class="div_icon" *ngIf="item.status == 1 && item.role == 4 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
                 <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSecretaryContract(item)">{{'contract.document' | translate}}</button>
               </div>
-              <div class="div_icon" *ngIf="item.contractStatus == '30'">
+              <div class="div_icon" *ngIf="item.contractStatus == 30">
                 <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.contractId);" />
               </div>
             </div>
@@ -174,19 +179,15 @@
     </div>
   </div>
 
+  <!--Danh sách tất cả hợp đồng có thể ký nhiều -->
   <div *ngIf="this.typeDisplay === 'signMany'">
-    <div class="item_contract"  *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
+    <div class="item_contract"  *ngFor="let item of contractsSignMany; let index1 = index">
       <div *ngIf="filter_status == 1 || filter_status == 4">
         <div class="row">
           <div class="col-md-5">
             <div class="row">
-              <div class="col-md-1 calendar_create">
-                <div>
-                  <input type="checkbox"/>
-                </div>
-              </div>
               <div class="col-md-11">
-                  <div class="item_contract_name" (click)="openDetail(item.contractId)">{{item.contractName}}</div>
+                  <div class="item_contract_name" (click)="openDetail(item.contractId)">{{item.participant.contract.name}}</div>
                   
                   <!--Cac ben ky-->
                   <div class="row" *ngFor="let itemPar of sortParticipant(item.participant.contract.participants); let index = index">
@@ -221,7 +222,7 @@
                 <!--Loại ký-->
                 <div class="row">
                   <div *ngIf="this.filter_status === 1" class="col-md-11 item_contract_infor">{{'Loại ký' | translate}}:
-                    <span class="status_blue">{{item.typeOfSign}}</span>
+                    <span class="status_blue">{{item.sign_type[0].name}}</span>
                   </div>
                 </div>
               </div>
@@ -241,19 +242,25 @@
               <div class="div_icon" *ngIf="item.status == 1 && item.role == 1 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
                 <button type="button" class="btn btn-outline-dark btn_submit" (click)="openCoordinatorContract(item)">{{'contract.lead' | translate}}</button>
               </div>
-              <div class="div_icon" *ngIf="item.status == 1 && item.role == 2 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
+              <!-- <div class="div_icon" *ngIf="item.status == 1 && item.role == 2 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
                 <button type="button" class="btn btn-outline-dark btn_submit" (click)="openConsiderContract(item)">{{'contract.view' | translate}}</button>
+              </div> -->
+
+              <!--Checkbox-->
+              <!--role = 3: ký, role = 4: đóng dấu-->
+              <div class="div_icon" *ngIf="item.status == 1 && (item.role == 3 || item.role == 4) && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
+                <div class="col-md-1 calendar_create">
+                  <div>
+                    <input name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked"
+                    />
+                  </div>
+                </div>
               </div>
 
-              <!--Button ký-->
-              <div class="div_icon" *ngIf="item.status == 1 && item.role == 3 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
-                <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSignatureContract(item)">{{'contract.sign' | translate}}</button>
-              </div>
-
-              <div class="div_icon" *ngIf="item.status == 1 && item.role == 4 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
+              <!-- <div class="div_icon" *ngIf="item.status == 1 && item.role == 4 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
                 <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSecretaryContract(item)">{{'contract.document' | translate}}</button>
-              </div>
-              <div class="div_icon" *ngIf="item.contractStatus == '30'">
+              </div> -->
+              <div class="div_icon" *ngIf="item.contractStatus == 30">
                 <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.contractId);" />
               </div>
             </div>
@@ -342,4 +349,43 @@
   </div>
 
 </div>
+
+
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-spin-clockwise">
+  <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
+</ngx-spinner>
+
+<div class="skeleton-sign position-absolute opacity-0">
+  <div class="signature-container" id="export-html"
+      style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
+    <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <div class="signature-content"
+        style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+      <div style="z-index: 2;text-align: left;">Ký bởi: {{nameCompany}}</div>
+      <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+    </div>
+  </div>
+
+  <!-- <div class="signature-container" id="export-html-hsm"  style="min-height: 80px;display: flex; font-size: 9px">
+    <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <div class="signature-content"
+        style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+      <div style="z-index: 2;text-align: left;">Mã số thuế: {{nameCompany}}</div>  
+      <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+    </div>
+  </div> -->
+
+  <div id="export-html-hsm"  style="min-height: 80px;display: flex; font-size: 9px">
+    <img style="width: 30px"  src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+      <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Mã số thuế: {{nameCompany}}</span>
+      <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+    </div>
+  </div>
+</div>
+
 
