Cập nhật code site nội bộ

--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -65,7 +65,7 @@
             </div>
         </div>
 
-        <div class="row" style="padding-top: 10px;">
+        <!-- <div class="row" style="padding-top: 10px;">
             <div class="col-md-6" *ngIf="!parent_id">
                 <div class="label_item">{{'Số lượng hợp đồng đã mua' | translate }}</div>
                 <div>
@@ -79,7 +79,7 @@
                     <div [innerHTML]="numContractCreate" class="input_text"></div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
