Tim kiem hop dong search theo trang thai hop dong

--- a/src/app/main/contract-signature/dialog/filter-list-dialog/filter-list-dialog.component.html
+++ b/src/app/main/contract-signature/dialog/filter-list-dialog/filter-list-dialog.component.html
@@ -53,6 +53,7 @@
                 <div>
                     <p-dropdown 
                         panelStyleClass="font"
+                        formControlName="contractStatus"
                         appendTo="body"
                         [options]="(this.router.url.includes('processed')) ? contractStatusProcessedList: contractStatusProcessingList" 
                         optionLabel="name"
