--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -11,8 +11,9 @@
     <div class="contract--content">
       <div class="contract__content--title">
         <div>{{'organization.me' | translate | uppercase}} -</div>
-        <input type="text" [(ngModel)]="data_organization.name" disabled>
+        <input type="text" [(ngModel)]="data_organization.name">
       </div>
+
       <div class="contract__content--participants">
         <div class="participants-border">
           <div class="label">{{'user.view' | translate}}</div>
