--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -1,5 +1,5 @@
 <div class="signature-container" id="export-html"
-     style="width: 155px;min-height: 80px; display: flex; font-size: 9px; background-color: white;">
+     style="width: 155px;min-height: 80px; display: flex; font-size: 9px;">
   <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
   <div class="signature-content"
        style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
